Fix screenshot wrapping for @jess

--- a/app/assets/stylesheets/modules/screenshot.css.scss
+++ b/app/assets/stylesheets/modules/screenshot.css.scss
@@ -12,13 +12,16 @@
     text-align: center;
   }
 
-  &:nth-child(1),
-  &:nth-child(3) {
+  &:nth-child(1) {
     width: 466px;
   }
 
   &:nth-child(2) {
     width: 555px;
+  }
+
+  &:nth-child(3) {
+    width: 465px;
   }
 }
 
